--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "vite": "^5.0.0"
   },
   "dependencies": {
-    "gsap": "^3.12.2"
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "gsap": "^3.12.2",
+    "svelte-fa": "^3.0.4"
   }
 }
