--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "gsap": "^3.12.2",
-    "svelte-fa": "^3.0.4"
+    "svelte-fa": "^3.0.4",
+    "svelte-routing": "^2.9.0"
   }
 }
