--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "sass": "^1.69.5",
     "svelte": "^4.2.3",
     "svelte-check": "^3.6.0",
+    "svelte-routing": "^2.9.0",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
     "vite": "^5.0.0"
@@ -22,7 +23,6 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "gsap": "^3.12.2",
-    "svelte-fa": "^3.0.4",
-    "svelte-routing": "^2.9.0"
+    "svelte-fa": "^3.0.4"
   }
 }
